refactor Dockerfile