@@ -8,6 +8,16 @@ COPY ./run-tests.sh /project
 
 WORKDIR /project
 
+ENV JAVA_TOOL_OPTIONS \
+    -Djava.security.egd=file:/dev/./urandom \
+    -XX:+UseSerialGC \
+    -XX:+UnlockExperimentalVMOptions \
+    -XX:+UseCGroupMemoryLimitForHeap \
+    -XX:MinHeapFreeRatio=20 \
+    -XX:MaxHeapFreeRatio=40 \
+    -XX:AdaptiveSizePolicyWeight=90 \
+    -XX:MaxRAMFraction=1
+
 RUN mvn dependency:go-offline
 RUN mvn package -DskipTests=true
 
